--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">>
-    <title>Ecom Tango</title>
-  </head>
-  <body>
-    <header>
-        <h1>Hello World!</h1>
-    </header>
-    <footer>
-    </footer>
-  </body>
-</html>
+{% extends 'base.html' %}
+{% block home %}
+<div>
+  <h1>Home</h1>
+</div>
+{% endblock %}
