--- a/templates/base.html
+++ b/templates/base.html
@@ -13,21 +13,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
+    <!-- Custom JS -->
+    <script src="{% static 'js/debug.js' %}" defer></script>
 
 
 </head>
 <body>
-    <!-- For homepages-->
-    {% block home %}
-    {% endblock %}
-
-    {% include 'sidebar.html' %}
     <!-- For other pages -->
-    {% block base %}
-    <div>
-        <div>
+    <div class="leftright">
+        {% include 'sidebar.html' %}
+        <div class="content">
+            {% include 'base_nav.html' %}
+            {% block base %}
+            {% endblock %} 
+        </div>
     </div>
-    {% endblock %}    
 </body>
 </html>
