--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="nav">
     <div>
         <a href="">asfasf</a>
         <button type="button" onclick="cssDebugger()" class="btn btn-primary">Debug</button>
