--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,3 +1,13 @@
 <div class="sidebar left">
-    <h2 class="site-name">Ecom-Tango</h2>
+    <div class="title">
+        <h3 class="site-name">Ecom-Tango</h3>    
+    </div>
+    
+    <div class="nav-list">
+        <h5>Auth</h5>
+        <ul>
+            <li><a href="">Login</a></li>
+
+        </ul>
+    </div>
 </div>
