--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <div class="leftright">
         {% include 'sidebar.html' %}
         <div class="content">
-            {% include 'base_nav.html' %}
+            {% include 'navbar.html' %}
             {% block base %}
             {% endblock %} 
         </div>
