--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,8 @@
 <nav class="nav">
-    <div>
+    <div class="left-nav">
         <a href="">asfasf</a>
+    </div>
+    <div class="right-nav">
         <button type="button" onclick="cssDebugger()" class="btn btn-primary">Debug</button>
     </div>
 </nav>
