--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,7 +7,21 @@
         <h5>Auth</h5>
         <ul>
             <li><a href="">Login</a></li>
-
+            <li><a href="">Signup</a></li>
         </ul>
     </div>
+
+    <div class="nav-list">
+        <h5>Stores</h5>
+    </div>
+
+    <div class="nav-list">
+        <h5>Utilities</h5>
+        <ul>
+            <li><a href="">Add Store</a></li>
+        </ul>
+        
+    </div>
+
+
 </div>
