--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -18,7 +18,7 @@
     <div class="nav-list">
         <h5>Utilities</h5>
         <ul>
-            <li><a href="">Add Store</a></li>
+            <li><a href="{% url 'dashboard:add_store' %}">Add Store</a></li>
         </ul>
         
     </div>
