--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -4,14 +4,14 @@ ul {
     margin: 0; padding: 0;
 }
 
-
 .sidebar {
+    width: 200px;
     background-color: black;
-    width: 18%;
     padding: 5px;
+    height: 100vh;
     box-sizing: content-box;
     color: white;
-    min-height: 100vh;
+    min-width: 190px;
 }
 
 .sidebar a{
@@ -38,7 +38,6 @@ ul {
     margin: 0px 0px 5px 15px;
     text-align: left;
 }
-
 
 .nav-list a:hover{
     color: gold;
