--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
     <!-- Custom JS -->
     <script src="{% static 'js/debug.js' %}" defer></script>
+    <script src="{% static 'js/form.js' %}" defer></script>
 
 
 </head>
