added credentials forms and submit button

--- a/templates/add_store.html
+++ b/templates/add_store.html
@@ -12,9 +12,13 @@
                     {% endfor %}
                 </select>
             </div>
+            <div id="credentials">
 
+            </div>
 
-            
+            <div id="submission">
+
+            </div>
         </form>
     </div>
 {% endblock %}
