added storeprofile class, and form input connection to backend

--- a/templates/add_store.html
+++ b/templates/add_store.html
@@ -2,13 +2,14 @@
 {% block base %}
     <div class="form">
         <h1>Add Store</h1>
-        <form id="store-form">
+        <form id="store-form" method="POST" enctype="multipart/from-data" action="{% url 'dashboard:add_store' %}">
+            {% csrf_token %}
             <div class="leftright">
                 <h4>Select a Platform</h4>
-                <select id="selector">
+                <select id="selector" name="platform">
                     <option>Select a Platform</option>
                     {% for platform in platforms %}
-                    <option>{{platform}}</option>
+                    <option value="{{platform}}">{{platform}}</option>
                     {% endfor %}
                 </select>
             </div>
