--- a/templates/add_store.html
+++ b/templates/add_store.html
@@ -6,13 +6,14 @@
             {% csrf_token %}
             <div class="leftright">
                 <h4>Select a Platform</h4>
-                <select id="selector" name="platform">
+                <select class="form-select" id="selector" name="platform">
                     <option>Select a Platform</option>
                     {% for platform in platforms %}
                     <option value="{{platform}}">{{platform}}</option>
                     {% endfor %}
                 </select>
             </div>
+            <br>
             <div id="credentials">
 
             </div>
