--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar left">
     <div class="title">
-        <h3 class="site-name">Ecom-Tango</h3>    
+        <h3 class="site-name"><a href="{% url 'dashboard:home' %}">Ecom-Tango</a></h3>    
     </div>
     
     <div class="nav-list">
