--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,13 +1,15 @@
 <div class="sidebar left">
     <div class="title">
-        <h3 class="site-name"><a href="{% url 'dashboard:home' %}">Ecom-Tango</a></h3>    
+        <h3 class="site-name">
+            <a href="{% url 'dashboard:home' %}">Ecom-Tango</a>
+        </h3>    
     </div>
     
     <div class="nav-list">
         <h5>Auth</h5>
         <ul>
-            <li><a href="">Login</a></li>
-            <li><a href="">Signup</a></li>
+            <li><a href="{% url 'authorization:login'%}">Login</a></li>
+            <li><a href="{% url 'authorization:signup'%}">Signup</a></li>
         </ul>
     </div>
 
