--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecom Tango</title>
 
-    {% include 'bootstrap.html' %}
+    {% include 'connections.html' %}
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/common.css' %}">
-    <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
-    <!-- Custom JS -->
-    <script src="{% static 'js/debug.js' %}" defer></script>
-    <script src="{% static 'js/form.js' %}" defer></script>
 
 
 </head>
