--- a/templates/home.html
+++ b/templates/home.html
@@ -8,23 +8,21 @@
 </head>
 <body>
   <div id="auth-div" class="form">
-    <form method="POST" enctype="multipart/form-data" action="{% url 'authorization:signup' %}">
+    <form method="POST" class="form" enctype="multipart/form-data" action="{% url 'authorization:login' %}">
       {% csrf_token %}
       <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="text" class="form-control" name="username" placeholder="Enter username">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <label></label>
+        <input type="text" class="form-control" id="password" name="username" placeholder="Enter Username">
       </div>
 
       <div class="form-group">
-        <label>Password</label>
+        <label></label>
         <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password">
       </div>
 
       <button type="submit" class="btn btn-primary">Sign in</button>
 
     </form>
-    <h2>Don't have an account?, <a href="">Sign-up</a></h2>
   </div>
 </body>
 </html>
