logout is working

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -9,6 +9,7 @@
         <h5>Auth</h5>
         <ul>
             <li><a href="{% url 'authorization:login'%}">Login</a></li>
+            <li><a href="{% url 'authorization:logout'%}">Logout</a></li>
         </ul>
     </div>
 
