logout is working

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="nav">
     <div class="left-nav">
-        <a href="">asfasf</a>
+        <a href="">User : {{user}}</a>
     </div>
     <div class="right-nav">
         <button type="button" onclick="cssDebugger()" class="btn btn-primary">Debug</button>
