added slug to storeprofile, listed out added stores

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar left">
     <div class="title">
         <h3 class="site-name">
-            <a href="{% url 'dashboard:home' %}">Ecom-Tango</a>
+            <a href="{% url 'dashboard:dashboard' %}">Ecom-Tango</a>
         </h3>    
     </div>
     
