--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
 {% block base %}
     <h1>Dashboard</h1>
+    <div class="added-stores">
+        {% for store in stores %}
+            <a href="{% url 'dashboard:dashboard' store_slug=store.slug %}">
+                <button class="btn btn-secondary">{{store}}</button>
+            </a>
+        {% endfor %}
+    </div>
 {% endblock %}
