--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
     <h1>Dashboard</h1>
     <div class="added-stores">
         {% for store in stores %}
-            <a href="{% url 'dashboard:dashboard' store_slug=store.slug %}">
+            <a href="">
                 <button class="btn btn-secondary">{{store}}</button>
             </a>
         {% endfor %}
