--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,10 +2,14 @@
 {% block base %}
     <h1>Dashboard</h1>
     <div class="added-stores">
-        {% for store in stores %}
-            <a href="{% url 'dashboard:dashboard' store_slug=store.slug %}">
-                <button class="btn btn-secondary">{{store}}</button>
-            </a>
-        {% endfor %}
+        {% if stores %}
+            {% for store in stores %}
+                <a href="{% url 'dashboard:dashboard' store_slug=store.slug %}">
+                    <button class="btn btn-secondary">{{store}}</button>
+                </a>
+            {% endfor %}
+        {% else %}
+            <h2>Add a store </h2>
+        {% endif %}
     </div>
 {% endblock %}
