figuring out htmx

--- a/templates/connections.html
+++ b/templates/connections.html
@@ -10,6 +10,10 @@
 <link rel="stylesheet" href="{% static 'css/common.css' %}">
 <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
 <link rel="stylesheet" href="{% static 'css/form.css' %}">
+
 <!-- Custom JS -->
 <script src="{% static 'js/debug.js' %}" defer></script>
 <script src="{% static 'js/form.js' %}" defer></script>
+
+<!-- HTMX -->
+<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
