--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,13 +3,15 @@
     <h1>Dashboard</h1>
     <div class="added-stores">
         {% if stores %}
-            {% for store in stores %}
-                <a href="{% url 'dashboard:dashboard' store_slug=store.slug %}">
-                    <button class="btn btn-secondary">{{store}}</button>
-                </a>
-            {% endfor %}
+        {% for store in stores %}
+        <button hx-get="{% url 'dashboard:view_store' store_slug=store.slug %}" hx-target="#response" hx-swap="innerHTML" class="btn btn-secondary">{{store}}</button>
+
+        <div id="response"></div>
+        {% endfor %}
         {% else %}
-            <h2>Add a store </h2>
+        <h2>Add a store </h2>
         {% endif %}
     </div>
+
+    
 {% endblock %}
