--- a/templates/store_detail.html
+++ b/templates/store_detail.html
@@ -1,1 +1,12 @@
-{{detail}}
+<div class="store-detail">
+    <!-- Request for order type -->
+    {% if order_types %}
+    <h2>Orders</h2>
+    <h5>Types</h5>    
+    <select>
+        {% for type in order_types %}
+        <option>{{type}}</option>
+        {% endfor %}
+    </select>
+    {% endif %}
+</div>
