--- a/static/css/common.css
+++ b/static/css/common.css
@@ -27,3 +27,12 @@ a {
 }
 
 
+/* Store detail */
+.order,.report {
+    border: 1px solid black;
+    border-radius: 3px;
+}
+.store-detail{
+    display: flex;
+    gap: 5px;
+}
