--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,17 +1,43 @@
 {% extends 'base.html' %}
 {% block base %}
     <h1>Dashboard</h1>
+    {% if stores %}
     <div class="added-stores">
-        {% if stores %}
-            {% for store in stores %}
-                <button hx-get="{% url 'dashboard:view_store' store_slug=store.slug %}" hx-target="#store-detail" hx-swap="innerHTML" class="btn btn-secondary">{{store}}</button>
+        {% for store in stores %}
+        <a href="{% url 'dashboard:view_store' store_slug=store.slug %}">
+            <button class="btn btn-secondary">{{store}}</button>
+        </a>
+        {% endfor %}
+    </div>
+
+    <!-- Code for detail view of first store on first dashboard loading-->
+    <div class="store-detail">
+        <!-- Request for order type -->
+        {% if order_types %}
+        <div class="order">
+            <h2>Orders</h2>
+            <h5>Types</h5>    
+            <select>
+                {% for type in order_types %}
+                <option>{{type}}</option>
+                {% endfor %}
+            </select>
+        </div>
+        {% endif %}
+
+        {% if report_types %}
+        <div class="report">
+            <h2>Reports</h2>
+            <select>
+            {% for type in report_types %}
+                <option>{{type}}</option>
             {% endfor %}
-
-            <!-- Code for detail view of first store on first dashboard loading-->
-
-            {% else %}
-            <h2>Add a store </h2>
+            </select>
+        </div>
         {% endif %}
     </div>
-    <div class="store-detail" id="store-detail"></div>
+
+    {% else %} <!-- No added stores -->
+        <h2>Add a store </h2>
+    {% endif %}
 {% endblock %}
