--- a/templates/date_range.html
+++ b/templates/date_range.html
@@ -1,4 +1,12 @@
 <div class="date-range" class="mb-3">
-    <input type="date" name="from" class="form-control">
-    <input type="date" name="to" class="form-control">
+    <div class="from-date">
+        <h5>From</h5>
+        <input type="date" name="from" class="form-control">
+    </div>
+
+    <div class="to-date">
+        <h5>To</h5>
+        <input type="date" name="to" class="form-control">
+    </div>
+    
 </div>
