--- a/templates/date_range.html
+++ b/templates/date_range.html
@@ -1,4 +1,4 @@
-<div class="date-range" class="mb-3">
+<div class="date-range" id="dateRange" class="mb-3">
     <div class="from-date">
         <h5>From</h5>
         <input type="date" name="from" class="form-control">
