--- a/templates/connections.html
+++ b/templates/connections.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="{% static 'css/common.css' %}">
 <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
 <link rel="stylesheet" href="{% static 'css/form.css' %}">
+<link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 
 <!-- Custom JS -->
 <script src="{% static 'js/debug.js' %}" defer></script>
