--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,7 @@
             <h2>Orders</h2>  
             <form method="POST" class="form" enctype="multipart/form-data" action="{% url 'dashboard:orders' store_slug=selected_store.slug %}">
                 {% csrf_token %}
-                <select name="order-type">
+                <select name="order-type" class="form-select" aria-label="Default select example">
                     {% for type in order_types %}
                     <option>{{type}}</option>
                     {% endfor %}
@@ -35,19 +35,25 @@
             <form method="POST" id="reportForm" class="form" enctype='multipart/form-data' action="{% url 'dashboard:create_report' store_slug=selected_store.slug %}">
                 {% csrf_token %}
                 <h2 id="formTitle">Reports</h2>
-                <select name="report-type" id="reportType">
+                <select name="report-type" id="reportType" class="form-select" aria-label="Default select example">
                     {% for type in report_types %}
                     <option>{{type}}</option>
                     {% endfor %}
                 </select>
 
-                <select name = "payment_method">
+                <select name = "payment_method" class="form-select" aria-label="Default select example">
                     <option>CashOnDelivery</option>
                     <option>Standard</option>
                 </select>
 
+                <div class="checkboxes">
+                    <input type="checkbox" id="pivot_table" name="pivot_table" value="pivot_table">
+                    <label for="vehicle1">Pivot table</label><br>
+                </div>
+                
+
                 {% if shipping_dates %}
-                <select name = "shipping_date">
+                <select name = "shipping_date" class="form-select" aria-label="Default select example">
                     {% for date in shipping_dates %}
                     <option>{{date}}</option>
                     {% endfor %}
