--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar left">
+<div class="sidebar">
     <div class="title">
         <h3 class="site-name">
             <a href="{% url 'dashboard:home' %}">Ecom-Tango</a>
