--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,24 +1,33 @@
 /* Theme configuration */
 :root {
-    --bg: rgb(240, 233, 213);
+
+    --dash_bg: rgb(240, 233, 213);
+    --module_bg :rgb(203, 255, 242);
+
+
+    --small_gap : 5px;
 }
 
 .nav {
     background-color: rgb(207, 247, 245);
     display: flex;
-    gap: 10px;
+    gap: var(--small_gap);
     padding: 5px;
-    width: 100vh;
+    width: 100vh; 
 }
 
+.right{
+    width: 100%;
+}
 
+/* Appearance*/
 .content{
-    background-color: var(--bg);
+    background-color: var(--dash_bg);
+    padding: var(--small_gap);
 }
 
-/* To arrange divs on left and right */
-.leftright {
-    margin: 0; padding: 10px;
+/* basic config*/
+.dashboard {
     display: flex;
 }
 
@@ -40,14 +49,19 @@ a {
     gap: 10px;
 }
 
-.order,.report {
-    border: 1px solid black;
-    border-radius: 3px;
-    padding: 10px;
+
+.dashboard-module{
+    background-color: var(--module_bg);
+    border-radius: 5px;
+    padding: var(--small_gap);
+}
+
+.selection-group{
+    display: flex;
+    gap: var(--small_gap)
 }
 
 .date-range{
-    display: flex;
-    gap: 5px;
+    display: flex; gap: 5px;
 }
 
