--- a/templates/date_range.html
+++ b/templates/date_range.html
@@ -1,10 +1,10 @@
 <div class="date-range" id="dateRange" class="mb-3">
-    <div class="from-date">
+    <div class="date">
         <h5>From</h5>
         <input type="date" name="from" class="form-control">
     </div>
 
-    <div class="to-date">
+    <div class="date">
         <h5>To</h5>
         <input type="date" name="to" class="form-control">
     </div>
