--- a/templates/home.html
+++ b/templates/home.html
@@ -7,22 +7,10 @@
   {% include 'connections.html' %}
 </head>
 <body>
-  <div id="auth-div" class="form">
-    <form method="POST" class="form" enctype="multipart/form-data" action="{% url 'authorization:login' %}">
-      {% csrf_token %}
-      <div class="form-group">
-        <label></label>
-        <input type="text" class="form-control" id="password" name="username" placeholder="Enter Username">
-      </div>
-
-      <div class="form-group">
-        <label></label>
-        <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password">
-      </div>
-
-      <button type="submit" class="btn btn-primary">Sign in</button>
-
-    </form>
-  </div>
+  <nav>
+    <div>
+      <a href="{% url 'authorization:login' %}"><button class="btn btn-primary">Login</button></a>
+    </div>
+  </nav>
 </body>
 </html>
