--- a/templates/connections.html
+++ b/templates/connections.html
@@ -15,6 +15,7 @@
 <!-- Custom JS -->
 <script src="{% static 'js/debug.js' %}" defer></script>
 <script src="{% static 'js/form.js' %}" defer></script>
+<script type="module" src="{% static 'js/api.js' %}" defer></script>
 
 <!-- HTMX -->
 <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
