bolded report checkboxex

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -56,7 +56,7 @@
                     {% endif %}
                 </div>
 
-                <div id="columnCheckBoxes"></div>
+                <div id="columnCheckBoxes" class="checkboxes"></div>
                 
                 <div class="checkboxes">
                     <label class="form-check-label" for="pivot_table">Pivot table</label><br>
