--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -67,7 +67,7 @@ select{
 }
 
 .checkboxes{
-    display: flex; gap:var(--small_gap);
+    display: flex; gap:var(--small_gap); flex-wrap: wrap;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
